force-app/main/default/src/objects/HealthCloudGA__EhrVirtualDeviceChannel__c/HealthCloudGA__EhrVirtualDeviceChannel__c.object-meta.xml
<CustomObject>
    <label>EHR Virtual Device Channel</label>
    <nameField>
        <displayFormat>DevCh-{0}</displayFormat>
        <label>EHR Virtual Device Channel Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Virtual Device Channels</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>