force-app/main/default/src/objects/HealthCloudGA__EhrVirtualDeviceChannel__c/fields/HealthCloudGA__EhrVirtualDevice__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__EhrVirtualDevice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Groups related data items</description>
    <label>EHR Virtual Device</label>
    <referenceTo>HealthCloudGA__EhrVirtualDevice__c</referenceTo>
    <relationshipLabel>Virtual Device Channels</relationshipLabel>
    <relationshipName>VirtualDeviceChannels</relationshipName>
    <type>Lookup</type>
</CustomField>