force-app/main/default/src/objects/HealthCloudGA__EhrVirtualDeviceChannel__c/fields/HealthCloudGA__Metric__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Metric__c</fullName>
    <description>Piece of data reported by device for Channel</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Metric</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>