force-app/main/default/src/objects/HealthCloudGA__EhrVirtualDeviceChannel__c/fields/HealthCloudGA__Observation__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Observation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The data for the metric</description>
    <label>Observation</label>
    <referenceTo>HealthCloudGA__EhrObservation__c</referenceTo>
    <relationshipLabel>Virtual Device Channels</relationshipLabel>
    <relationshipName>VirtualDeviceChannels</relationshipName>
    <type>Lookup</type>
</CustomField>